add config API, update docs with config + user API
